Only apply --add-opens to compiler JVM options when using JDK9+